# synedrion

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  PAPER.md  README.md
.github/workflows/: ci.yml  cla.yaml  lint.yml  release-plz.yaml  test.yml
benches/: paillier.rs  zk_proofs.rs
examples/: dudect.rs  zk_proofs_dudect.rs
src/: auxiliary.rs  centralized_keygen.rs  collections.rs  curve.rs  dev.rs  entities.rs  k256.rs  keygen.rs  lib.rs  paillier.rs  params.rs  private_benches.rs  protocols.rs  rounds.rs  session.rs  sessions.rs  sigma.rs  tests.rs  tools.rs  uint.rs  zk.rs
src/cggmp21/: aux_gen.rs  interactive_signing.rs  interactive_signing_tests.rs  key_refresh.rs  key_refresh_tests.rs
src/cggmp21/sigma/: aff_g.rs  dec.rs  mod_.rs  prm.rs
src/curve/: arithmetic.rs  ecdsa.rs
src/entities/: full.rs  internal.rs  threshold.rs
src/paillier/: encryption.rs  keys.rs  params.rs  ring_pedersen.rs  rsa.rs  uint.rs
src/params/: conversion.rs  dev.rs  k256.rs  traits.rs
src/private_benches/: CT_README.md  paillier.rs  secret_is_ct.rs  secret_signed_ct.rs  zk_proofs.rs  zk_proofs_ct.rs
src/protocols/: aux_gen.rs  aux_gen_tests.rs  auxiliary.rs  common.rs  entities.rs  generic.rs  interactive_signing.rs  interactive_signing_tests.rs  key_init.rs  key_init_tests.rs  key_refresh.rs  key_refresh_tests.rs  key_resharing.rs  keygen.rs  misbehavior_tests.rs  presigning.rs  rounds.rs  signing.rs
src/protocols/misbehavior_tests/: aux_gen.rs  interactive_signing.rs  key_init.rs  key_refresh.rs
src/sessions/: auxiliary.rs  generic.rs  interactive_signing.rs  keygen.rs  presigning.rs  signing.rs
src/sigma/: aff_g.rs  enc.rs  fac.rs  log_star.rs  mod_.rs  prm.rs  sch.rs  schnorr.rs
src/tests/: threshold.rs
src/tools/: bitvec.rs  boxed_rng.rs  collections.rs  group.rs  hashing.rs  jacobi.rs  protocol_shortcuts.rs  protocol_shortcuts_dev.rs  random.rs  secret.rs  serde.rs  sss.rs
src/uint/: public_signed.rs  public_uint.rs  secret_signed.rs  secret_unsigned.rs  traits.rs
src/www02/: entities.rs
src/zk/: aff_g.rs  aff_g_star.rs  dec.rs  elog.rs  enc_elg.rs  fac.rs  mod_.rs  prm.rs  sch.rs
synedrion/: Cargo.toml
synedrion-js-bindings/: Cargo.toml  README.md
synedrion-wasm/: Cargo.toml  Makefile  README.md  package.template.json
synedrion-wasm/src/: lib.rs  make_key_shares.rs
synedrion-wasm/tests/: wasm.rs
synedrion-wasm/tests-js/: package.json
synedrion-wasm/tests-js/src/: main.test.ts
synedrion/benches/: bench.rs  fac_proof.rs  pow.rs  zk_proofs.rs
synedrion/src/: bench_internals.rs  centralized_keygen.rs  cggmp21.rs  common.rs  constructors.rs  curve.rs  dev.rs  entities.rs  k256.rs  lib.rs  paillier.rs  private_benches.rs  protocols.rs  rounds.rs  sessions.rs  sigma.rs  threshold.rs  tools.rs  uint.rs  www02.rs
synedrion/src/cggmp21/: aux_gen.rs  aux_gen_tests.rs  benches.rs  conversion.rs  entities.rs  interactive_signing.rs  interactive_signing_tests.rs  key_init.rs  key_init_tests.rs  key_refresh.rs  key_refresh_tests.rs  params.rs  protocols.rs  sigma.rs  signing_malicious.rs
synedrion/src/cggmp21/protocols/: aux_gen.rs  auxiliary.rs  common.rs  generic.rs  interactive_signing.rs  key_gen.rs  key_init.rs  key_init_errors.rs  key_init_malicious.rs  key_refresh.rs  key_resharing.rs  keygen.rs  keygen_and_aux.rs  merged.rs  presigning.rs  signing.rs  signing_malicious.rs  test_utils.rs  threshold.rs  wrappers.rs
synedrion/src/cggmp21/sigma/: aff_g.rs  aff_g_star.rs  dec.rs  dec_new.rs  elog.rs  enc.rs  enc_elg.rs  fac.rs  log_star.rs  mod_.rs  mul.rs  mul_star.rs  prm.rs  sch.rs
synedrion/src/curve/: arithmetic.rs  bip32.rs  ecdsa.rs
synedrion/src/paillier/: encryption.rs  keys.rs  params.rs  ring_pedersen.rs  rsa.rs  signed.rs  uint.rs
synedrion/src/private_benches/: mod.rs
synedrion/src/protocols/: auxiliary.rs  common.rs  generic.rs  interactive_signing.rs  keygen.rs  keygen_and_aux.rs  presigning.rs  signing.rs  threshold.rs  type_erased.rs
synedrion/src/rounds/: generic.rs  malicious.rs  test_utils.rs  wrappers.rs
synedrion/src/sessions/: auxiliary.rs  broadcast.rs  combined_message.rs  constructors.rs  echo.rs  error.rs  evidence.rs  generic.rs  interactive_signing.rs  keygen.rs  message_bundle.rs  presigning.rs  session.rs  signed_message.rs  signing.rs  states.rs  type_erased.rs
synedrion/src/sigma/: aff_g.rs  enc.rs  fac.rs  log_star.rs  mod_.rs  params.rs  prm.rs  sch.rs
synedrion/src/tests/: threshold.rs
synedrion/src/tools/: bitvec.rs  collections.rs  group.rs  hashing.rs  hashing_serializer.rs  hide_debug.rs  protocol_shortcuts.rs  protocol_shortcuts_dev.rs  random.rs  secret.rs  serde_bytes.rs  sss.rs
synedrion/src/uint/: bounded.rs  jacobi.rs  pow.rs  public_bounded.rs  public_signed.rs  secret_bounded.rs  secret_signed.rs  secret_unsigned.rs  signed.rs  traits.rs
synedrion/src/www02/: bip32.rs  entities.rs  key_resharing.rs
synedrion/tests/: interactive_signing.rs  sessions.rs  threshold.rs
