[package]
name = "synedrion-wasm"
version = "0.0.2"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
bincode = "1.3"
synedrion = { path = "../synedrion" }
js-sys = "0.3.62"
rand_core = { version = "0.6.4", features = ["getrandom"]}
wasm-bindgen = "0.2.85"

[lib]
crate-type = ["cdylib"]
