[package]
name = "synedrion-wasm"
description = "Bindings for the Rust threshold signing library `synedrion`"
version = "0.0.9"
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode = "1.3"
synedrion = { path = "../synedrion" }
js-sys = "0.3.55"
getrandom = { version = "0.2", features = ["js"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
wasm-bindgen = "0.2.85"
wasm-bindgen-derive = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"
