[package]
name = "synedrion"
authors = ['Entropy Cryptography <engineering@entropy.xyz>']
version = "0.3.0-dev"
edition = "2021"
rust-version = "1.83"
license = "AGPL-3.0-or-later"
description = "Threshold signing library based on Canetti-Gennaro-Goldfeder-Makriyannis-Peled '24 scheme"
repository = "https://github.com/entropyxyz/synedrion"
readme = "README.md"
categories = ["cryptography", "no-std"]

[dependencies]
manul = { git = "https://github.com/entropyxyz/manul.git", rev = "f4c9515eaeb97a17ab3eef908b73be6159f7d9d2" }
signature = { version = "2", default-features = false, features = ["alloc"] }
rand_core = { version = "0.6.4", default-features = false }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
digest = { version = "0.10", default-features = false, features = ["alloc"] }
hashing-serializer = { version = "0.1", default-features = false }
secrecy = { version = "0.10", default-features = false, features = ["serde"] }
zeroize = { version = "1.8", default-features = false, features = ["alloc", "zeroize_derive"] }
bip32 = { version = "0.5", default-features = false, features = ["alloc", "secp256k1", "k256"], optional = true }
tracing = { version = "0.1.41", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
rand = { version = "0.8", default-features = false }

# TODO(dp): feature gate this
tiny-curve = { version = "0.1", features = ["serde", "pkcs8"] }
# TODO(dp): feature gate this
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "serde", "ecdsa"] }
# TODO(dp): Should this be `primeorder` instead?
primeorder = { version = "0.13", features = ["serde"] }
# TODO(dp): Cribbed from tiny-curve, but are these the right features?
# TODO(dp): "pem" and "serde" are both needed for VerifyingKey<C> to be Serialize. Wut?
ecdsa = { version = "0.16", default-features = false, features = ["arithmetic", "digest", "hazmat", "serde", "pem"] }

# Note: `alloc` is needed for `crytpto-bigint`'s dependency `serdect` to be able
# to serialize Uints in human-readable formats.
crypto-bigint = { version = "0.6", default-features = false, features = [
	"serde",
	"alloc",
	"rand_core",
	"zeroize",
] }
crypto-primes = { version = "0.6", default-features = false }

serde = { version = "1", default-features = false, features = ["derive"] }
serde-encoded-bytes = { version = "0.1", default-features = false, features = ["hex", "base64"] }
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["serde", "alloc"] }
displaydoc = { version = "0.2", default-features = false }
criterion = { version = "0.5", optional = true }

[dev-dependencies]
manul = { git = "https://github.com/entropyxyz/manul.git", rev = "f4c9515eaeb97a17ab3eef908b73be6159f7d9d2", features = ["dev"] }
serde_assert = "0.8"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
rand = { version = "0.8", features = ["getrandom"] }
criterion = "0.5"
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic", "pem", "serde"] }
impls = "1"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
test-log = { version = "0.2.16", default-features = false, features = ["trace", "color"] }
tracing-subscriber = "0.3.19"

[features]
private_benches = ["criterion"]

[[bench]]
bench = true
name = "bench"
harness = false


[[bench]]
bench = true
name = "zk_proofs"
harness = false
required-features = ["private_benches"]
